hphp/test/slow/unstable_features/default_disable_unstable_features.php.expectf
Fatal error: This is an invalid use of '__EnableUnstableFeatures' because unstable features are disabled in %s on line 6
